# pyui-automation

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  package.json  pyproject.toml  pyrefly.toml  pytest-html.ini  pytest.ini  report.html  requirements.txt  run_all.bat  run_server.bat  run_tests.bat
docs/: README.md  advanced_topics.md  api_reference.md  automation_features.md  configuration.md  core_concepts.md  dependency_injection.md  error_handling.md  examples.md  framework_architecture.md  game_automation.md  getting_started.md  high_level_api.md  locators_guide.md  ocr_architecture.md  ocr_guide.md  performance_monitoring.md  property_system.md  testing_guide.md  troubleshooting.md  ui_elements.md  utils_guide.md  visual_testing.md
pytest_temp/test_generate_diff_report0/: visual_diff_report.html
pytest_temp/test_generate_report0/: accessibility_report.html
pytest_temp/test_generate_report1/: performance_report.html
pytest_temp/test_generate_report_element_a0/: report1.html  report2.html
pytest_temp/test_generate_report_no_violat0/: empty_report.html
pyui_automation/: __init__.py  accessibility.py  application.py  core.py  di.py  elements.py  input.py  logging.py  ocr.py  optimization.py  performance.py  pyui_automation.py  visual.py  wait.py
pyui_automation/backends/: __init__.py  backend_utils.py  base.py  base_backend.py  game_backend.py  linux.py  macos.py  qt.py  windows.py
pyui_automation/core/: __init__.py  application.py  config.py  di_manager.py  exceptions.py  factory.py  log_manager.py  logging.py  optimization.py  session.py  utils.py  visual.py  wait.py
pyui_automation/core/interfaces/: __init__.py  iapplication.py  ibackend.py  ibackend_application.py  ibackend_factory.py  ibackend_lifecycle.py  ibackend_screen.py  ibackend_window.py  iconfiguration_manager.py  ielement.py  ielement_discovery_service.py  ielement_geometry.py  ielement_interaction.py  ielement_properties.py  ielement_screenshot.py  ielement_search.py  ielement_state.py  ielement_wait.py  iinput_backend.py  iinput_service.py  ilocator_factory.py  iocr_service.py  iperformance_service.py  iscreenshot_service.py  isession_manager.py  ivisual_testing_service.py
pyui_automation/core/services/: backend_factory.py  configuration_manager.py  di_container.py  element_discovery_service.py  input_service.py  locator_factory.py  memory_leak_detector.py  performance_analyzer.py  performance_monitor.py  performance_reporter.py  performance_tester.py  screenshot_service.py  session.py  session_manager.py  visual.py  visual_testing_service.py
pyui_automation/elements/: __init__.py  accordion.py  base.py  base_element.py  breadcrumb.py  button.py  calendar.py  checkbox.py  colorpicker.py  dialog.py  dropdown.py  element_factory.py  element_finder.py  image.py  input.py  interaction_service.py  listview.py  menu.py  notification.py  progressbar.py  properties.py  radio.py  rating.py  scrollbar.py  search_service.py  slider.py  spinner.py  splitter.py  state_service.py  table.py  tabs.py  text.py  toggle.py  toolbar.py  tooltip.py  tree.py  wait_service.py  window.py
pyui_automation/elements/specialized/: __init__.py  button_element.py  checkbox_element.py  (+4 more)
pyui_automation/game_elements/: __init__.py  achievement_panel.py  auction_house.py  bank_panel.py  buff_panel.py  character_stats.py  chat_window.py  crafting_window.py  equipment_panel.py  guild_panel.py  health_bar.py  inventory_slot.py  mail_system.py  minimap.py  mount_pet_panel.py  party_frame.py  quest_log.py  skill_bar.py  social_panel.py  talent_tree.py  trade_window.py  world_map.py
pyui_automation/input/: __init__.py  game_input.py  keyboard.py  mouse.py
pyui_automation/locators/: __init__.py  base.py  interfaces.py  linux.py  macos.py  windows.py
pyui_automation/ocr/: __init__.py  engine.py  models.py  preprocessing.py  stub.py  unified.py
pyui_automation/server/: __init__.py  run_server.py  server.py
pyui_automation/services/: accessibility.py  accessibility_impl.py  application.py  application_impl.py  backend.py  backend_impl.py  input.py  input_impl.py  ocr.py  ocr_impl.py  performance.py  performance_impl.py  visual.py  visual_impl.py
pyui_automation/utils/: __init__.py  analytics.py  core.py  exporters.py  file.py  image.py  logging_config.py  metrics.py  notifications.py  storage.py  types.py  validation.py
tests/: conftest.py  html_reporter.py  test_accessibility.py  test_application.py  test_architecture.py  test_config.py  test_core.py  test_di.py  test_dip.py  test_elements.py  test_exceptions.py  test_factory.py  test_game_input.py  test_input.py  test_locators_solid.py  test_logging.py  test_ocr.py  test_optimization.py  test_performance.py  test_session.py  test_visual.py  test_wait.py
tests/.pytest_results/: test_results.xml
tests/backends/: test_base.py  test_game_backend.py  test_linux.py  test_macos.py  test_windows.py
tests/core/: test_utils.py
tests/data/: element_data.py
tests/elements/: test_accordion.py  test_base.py  test_breadcrumb.py  test_button.py  test_calendar.py  test_checkbox.py  test_colorpicker.py  test_dialog.py  test_dropdown.py  test_image.py  test_input.py  test_listview.py  test_menu.py  test_notification.py  test_progressbar.py  test_radio.py  test_rating.py  test_scrollbar.py  test_slider.py  test_spinner.py  test_splitter.py  test_table.py  test_tabs.py  test_text.py  test_toggle.py  test_toolbar.py  test_tooltip.py  test_tree.py  test_window.py
tests/test_game_elements/: __init__.py  test_achievement_panel.py  test_auction_house.py  test_bank_panel.py  test_buff_panel.py  test_character_stats.py  test_chat_window.py  test_crafting_window.py  test_equipment_panel.py  test_guild_panel.py  test_health_bar.py  test_inventory_slot.py  test_mail_system.py  test_minimap.py  test_mount_pet_panel.py  test_party_frame.py  test_quest_log.py  test_skill_bar.py  test_social_panel.py  test_talent_tree.py  test_trade_window.py  test_world_map.py
tests/utils/: test_file.py  test_image.py  test_logging_config.py  test_metrics.py  test_validation.py
(+26 files in other folders)
